# rust-web

./: .gitignore  README.md
db/: Cargo.toml  db.sql
db/src/: main.rs
hello-world/src/: main.rs
s1/: Cargo.toml
s1/http/src/: httprequest.rs  httpresponse.rs
s1/httpserver/: Cargo.toml
s1/httpserver/data/: orders.json
s1/httpserver/public/: 404.html  health.html  index.html  styless.css
s1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
s1/tcpclient/src/: main.rs
s1/tcpserver/src/: main.rs
ws/: .env
ws/webservice/: Cargo.toml
ws/webservice/src/: db_access.rs  errors.rs  handlers.rs  models.rs  routers.rs  state.rs
ws/webservice/src/dbaccess/: course.rs
ws/webservice/src/handlers/: course.rs  general.rs
ws/webservice/src/models/: course.rs
