[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7.0"
serde = { version = "1.0.149", features = ["derive"] }
chrono = {version = "0.4.23", features = ["serde"]}
env_logger = "0.10.0"
dotenv = "0.15.0"
openssl = { version = "0.10", features = ["vendored"] }
sqlx = { version = "0.6.2", features =[
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "mysql",
]}